--- a/src/app/Paginas/Header/nav-encode/nav-encode.component.html
+++ b/src/app/Paginas/Header/nav-encode/nav-encode.component.html
@@ -32,16 +32,16 @@
     <ng-container *ngIf="userService.activo()">
       <ul class="nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light tamaño-font" id="navbarDropdownMenuUsuariosLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a *ngIf="userService.isValidTipoUser(util.SUPERADMIN) || userService.isValidTipoUser(util.ADMIN)" class="nav-link dropdown-toggle text-light tamaño-font" id="navbarDropdownMenuUsuariosLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Usuarios
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuUsuariosLink">
-            <a class="dropdown-item padding-left-p" [routerLink]="['/usuarios']">
+            <a class="dropdown-item padding-left-p" [routerLink]="['/usuarios']" *ngIf="userService.isValidTipoUser(util.SUPERADMIN) || userService.isValidTipoUser(util.ADMIN)">
               <span class="margin-rigth-p">
                 <fa-icon [icon]="util.faList"></fa-icon>
               </span>
               Listado</a>
-            <a class="dropdown-item padding-left-p" [routerLink]="['usuarios/permisos']">
+            <a class="dropdown-item padding-left-p" [routerLink]="['usuarios/permisos']" *ngIf="userService.isValidTipoUser(util.SUPERADMIN)">
               <span class="margin-rigth-p">
                 <fa-icon [icon]="util.faCheckSquare"></fa-icon>
               </span>
@@ -70,7 +70,6 @@
               Inconsistencia</a>
           </div>
         </li>
-
       </ul>
       <ul class="nav">
         <li class="nav-item dropdown">
@@ -78,9 +77,6 @@
             <img [src]="urlAvatar()" alt="Avatar" class="avatar">
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <!-- class="dropdown-item" (click)="userService.prueba()">Prueba</a>
-            <a class="dropdown-item" (click)="generatePass()">Generate Pass</a-->
-            <!--a class="dropdown-item" (click)="insertCurrencies()">Currency</a-->
             <a class="dropdown-item padding-left-p" [routerLink]="['/perfil']" >
               <span class="margin-rigth-p">
                 <fa-icon [icon]="util.faCog"></fa-icon>
