--- a/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
@@ -3,7 +3,9 @@
     <h3 class="font-weight-normal text-light">{{userService.User.email}}</h3>
   </div>
 </div>
-
+<div class="container membrete-logo" >
+  <img src="assets/img/logoEMX.png" id="logoEncodeMX">
+</div>
 <div class="row" style="margin: 0px;">
   <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 " style="padding-left: 10px; padding-top: 10px;">
     <!--div class="phone-generic flex-center-items">
