--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
@@ -14,7 +14,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title centerTitleModal" id="modalConfirmInconsistenciaTitle">Corregir Inconsistencia</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button [disabled]="!usuarioServicio.isValidPermiso(util.PERMISO_MNTINCONSISTENCIA)" type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -248,7 +248,7 @@
     </div>
   </div>
   <div class="row" style="display: block">
-    <button class="btn  btn-outline-success" (click)="corregirTabla()" [disabled]="errorValidacionUserBackup">
+    <button [disabled]="!usuarioServicio.isValidPermiso(util.PERMISO_MNTINCONSISTENCIA)" class="btn  btn-outline-success" (click)="corregirTabla()" [disabled]="errorValidacionUserBackup">
       <span>
         <fa-icon [icon]="util.faTools"></fa-icon>
       </span>
